@startuml classDiagram
skinparam classAttributeIconSize 0
skinparam Style strictuml

class Barang {
  + id_barang : int
  + nama_barang : string
  + kategori : string
  + stok : int
  + tambah() : void
  + update() : void
  + hapus() : void
  + cekStok() : int
}

class Peminjaman {
  + id_pinjam : int
  + nama_peminjam : string
  + jumlah : int
  + tanggal_pinjam : date
  + nama_ruangan : string
  + simpan() : void
  + validasiStok() : bool
}

class Maintenance {
  + id_mt : int
  + tgl_maintenance : date
  + keterangan : string
  + simpan() : void
  + update() : void
  + hapus() : void
}

class PengecekanRutin {
  + id_cek : int
  + tgl_cek : date
  + kondisi : string
  + simpan() : void
  + hapus() : void
}

class Report {
  + tgl_generate : datetime
  + requestData() : void
  + previewReport() : void
  + exportToExcel() : void
}

' Relasi antar class
Barang "1" -- "*" Peminjaman : dipinjam >
Barang "1" -- "*" Maintenance : dirawat >
Barang "1" -- "*" PengecekanRutin : dicek >
Report ..> Barang : mengambil data >

@enduml